Issue severity legend: Fixed FF line wrap bug
[Issue #52]

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -114,9 +114,10 @@
             li span.label {
                 width: 100%;
                 cursor: pointer;
+                text-align: right;
 
-                span.badge {
-                    float: right;
+                span.severity-name {
+                    float: left;
                 }
             }
 
